# cparrun

./: README.md  pyproject.toml
src/cparrun/: __init__.py  cparrun.py
